--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portfolio</title>
+	<title>Портфолио</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Manrope&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-	
+
+	<!-- Header -->
+	<header>
+		<div class="container">
+			<div class="header__inner">
+				<div class="header__logo">
+					<a href="/">
+						<img src="img/logo.png" alt="логотип">
+					</a>
+				</div>
+				<nav class="nav">
+					<a href="#" class="nav__link">портфолио</a>
+					<a href="#" class="nav__link">компетенции</a>
+					<a href="#" class="nav__link">УСЛУГИ</a>
+					<a href="#" class="nav__link">КОНТАКТЫ</a>
+				</nav>
+			</div>
+		</div>
+	</header>
 </body>
+
 </html>
