--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 	<!-- Header -->
-	<header>
+	<header class="header">
 		<div class="container">
 			<div class="header__inner">
 				<div class="header__logo">
@@ -31,6 +31,13 @@
 					<a href="#" class="nav__link">КОНТАКТЫ</a>
 				</nav>
 			</div>
+			<p class="header__text">
+				Разрабатываю имиджевые сайты для малого и среднего бизнеса, которые повышают престиж компании и позволяют
+				выделиться на фоне конкурентов
+			</p>
+			<h1 class="header__title">
+				Привет, я Саша — фронтенд разарботчик и дизайнер сайтов
+			</h1>
 		</div>
 	</header>
 </body>
