--- a/index.html
+++ b/index.html
@@ -40,6 +40,48 @@
 			</h1>
 		</div>
 	</header>
+
+	<main>
+		<!-- Projects -->
+		<section class="section">
+			<div class="container">
+				<h2 class="section__title">Самые свежие проекты</h2>
+				<ul class="projects">
+					<li class="project__item">
+						<div class="project__inner">
+							<img src="img/projects/1.png" alt="" class="project__img">
+						</div>
+						<div class="project__dec">
+							<h3 class="project__title">Realhome</h3>
+							<p class="project__text">дизайн,верстка, настройка</p>
+						</div>
+					</li>
+
+					<li class="project__item">
+						<div class="project__inner">
+							<img src="img/projects/3.png" alt="" class="project__img">
+						</div>
+						<div class="project__dec">
+							<h3 class="project__title">GLASS</h3>
+							<p class="project__text">разработка интерфейса</p>
+						</div>
+					</li>
+
+					<li class="project__item">
+						<div class="project__inner">
+							<img src="img/projects/2.png" alt="" class="project__img">
+						</div>
+						<div class="project__dec">
+							<h3 class="project__title">Fesiyen</h3>
+							<p class="project__text">разработка интерфейса</p>
+						</div>
+					</li>
+				</ul>
+				<a class="projects__info" href="#">Смотреть все проекты</a>
+			</div>
+
+		</section>
+	</main>
 </body>
 
 </html>
