--- a/index.html
+++ b/index.html
@@ -79,7 +79,19 @@
 				</ul>
 				<a class="projects__info" href="#">Смотреть все проекты</a>
 			</div>
+		</section>
 
+		<section class="section">
+			<div class="section__contacts">
+				<div class="container">
+					<h3 class="contacts__title">Для связи:</h3>
+					<div>
+						<div class="contact__info"><a class="contact__link" href="#">instagram</a></div>
+						<div class="contact__info"><a class="contact__link" href="#">telegram</a></div>
+						<div class="contact__info"><a class="contact__link" href="#">mail</a></div>
+					</div>
+				</div>
+			</div>
 		</section>
 	</main>
 </body>
