--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</div>
 	</header>
 
-	<main>
+	<main class="main">
 		<!-- Projects -->
 		<section class="section">
 			<div class="container">
@@ -94,6 +94,17 @@
 			</div>
 		</section>
 	</main>
+
+	<!-- Footer -->
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__info">
+				<p class="footer__text">Портфолио фротнтенд-разработчика Саши Орлова</p>
+				<p class="footer__copyright">Все права защищены. 2023</p>
+			</div>
+
+		</div>
+	</footer>
 </body>
 
 </html>
