--- a/index.html
+++ b/index.html
@@ -82,6 +82,31 @@
 		</section>
 
 		<section class="section">
+			<div class="container">
+				<h2 class="section__title">Мои компетенции</h2>
+				<div class="skils">
+					<h3 class="skils__title">HTML и CSS</h3>
+					<p class="skils__description">это основа фронтенд разработки. Умение создавать и правильно структурировать HTML-документы, а также применять стили к этим документам на CSS, является обязательным навыком для каждого фронтенд разработчика.</p>	
+				</div>
+
+				<div class="skils">
+					<h3 class="skils__title">JavaScript</h3>
+					<p class="skils__description">это язык программирования, который используется для создания динамического и интерактивного пользовательского интерфейса. Хороший фронтенд разработчик должен быть знаком с основами JavaScript, включая работу с DOM-деревом, асинхронными запросами и манипуляцией данными на стороне клиента.</p>	
+				</div>
+
+				<div class="skils">
+					<h3 class="skils__title">Работа с библиотеками и фреймворкамиc</h3>
+					<p class="skils__description">фронтенд разработчики должны быть знакомы с различными библиотеками и фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их под нужды проекта и расширять их функциональность, является очень важным навыком.</p>	
+				</div>
+
+				<div class="skils">
+					<h3 class="skils__title">Разработка для мобильных устройств и адаптивная верстка</h3>
+					<p class="skils__description">фронтенд разработчики должны быть знакомы с различными библиотеками и фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их под нужды проекта и расширять их функциональность, является очень важным навыком.</p>	
+				</div>
+			</div>
+		</section>
+
+		<section class="section">
 			<div class="section__contacts">
 				<div class="container">
 					<h3 class="contacts__title">Для связи:</h3>
