changed section projects

--- a/index.html
+++ b/index.html
@@ -42,37 +42,38 @@
 	</header>
 
 	<main class="main">
+
 		<!-- Projects -->
 		<section class="section">
 			<div class="container">
 				<h2 class="section__title">Самые свежие проекты</h2>
 				<ul class="projects">
 					<li class="project__item">
-						<div class="project__inner">
-							<img src="img/projects/1.png" alt="" class="project__img">
-						</div>
-						<div class="project__dec">
-							<h3 class="project__title">Realhome</h3>
+						<img src="img/projects/1.png" alt="превью Realhome" class="project__preview">
+						<div class="project__description">
+							<h3 class="project__title">
+								<a href="#">Realhome</a>
+							</h3>
 							<p class="project__text">дизайн,верстка, настройка</p>
 						</div>
 					</li>
 
 					<li class="project__item">
-						<div class="project__inner">
-							<img src="img/projects/3.png" alt="" class="project__img">
-						</div>
-						<div class="project__dec">
-							<h3 class="project__title">GLASS</h3>
+						<img src="img/projects/3.png" alt="превью GLASS" class="project__preview">
+						<div class="project__description">
+							<h3 class="project__title">
+								<a href="#">GLASS</a>
+							</h3>
 							<p class="project__text">разработка интерфейса</p>
 						</div>
 					</li>
 
 					<li class="project__item">
-						<div class="project__inner">
-							<img src="img/projects/2.png" alt="" class="project__img">
-						</div>
-						<div class="project__dec">
-							<h3 class="project__title">Fesiyen</h3>
+						<img src="img/projects/2.png" alt="превью Fesiyen" class="project__preview">
+						<div class="project__description">
+							<h3 class="project__title">
+								<a href="#">Fesiyen</a>
+							</h3>
 							<p class="project__text">разработка интерфейса</p>
 						</div>
 					</li>
@@ -86,22 +87,31 @@
 				<h2 class="section__title">Мои компетенции</h2>
 				<div class="skils">
 					<h3 class="skils__title">HTML и CSS</h3>
-					<p class="skils__description">это основа фронтенд разработки. Умение создавать и правильно структурировать HTML-документы, а также применять стили к этим документам на CSS, является обязательным навыком для каждого фронтенд разработчика.</p>	
+					<p class="skils__description">это основа фронтенд разработки. Умение создавать и правильно структурировать
+						HTML-документы, а также применять стили к этим документам на CSS, является обязательным навыком для каждого
+						фронтенд разработчика.</p>
 				</div>
 
 				<div class="skils">
 					<h3 class="skils__title">JavaScript</h3>
-					<p class="skils__description">это язык программирования, который используется для создания динамического и интерактивного пользовательского интерфейса. Хороший фронтенд разработчик должен быть знаком с основами JavaScript, включая работу с DOM-деревом, асинхронными запросами и манипуляцией данными на стороне клиента.</p>	
+					<p class="skils__description">это язык программирования, который используется для создания динамического и
+						интерактивного пользовательского интерфейса. Хороший фронтенд разработчик должен быть знаком с основами
+						JavaScript, включая работу с DOM-деревом, асинхронными запросами и манипуляцией данными на стороне клиента.
+					</p>
 				</div>
 
 				<div class="skils">
-					<h3 class="skils__title">Работа с библиотеками и фреймворкамиc</h3>
-					<p class="skils__description">фронтенд разработчики должны быть знакомы с различными библиотеками и фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их под нужды проекта и расширять их функциональность, является очень важным навыком.</p>	
+					<h3 class="skils__title">Работа с библиотеками и фреймворками</h3>
+					<p class="skils__description">фронтенд разработчики должны быть знакомы с различными библиотеками и
+						фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их
+						под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
 				</div>
 
 				<div class="skils">
-					<h3 class="skils__title">Разработка для мобильных устройств и адаптивная верстка</h3>
-					<p class="skils__description">фронтенд разработчики должны быть знакомы с различными библиотеками и фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их под нужды проекта и расширять их функциональность, является очень важным навыком.</p>	
+					<h3 class="skils__title">Разработка для мобильных <br> устройств и адаптивная верстка</h3>
+					<p class="skils__description">фронтенд разработчики должны быть знакомы с различными библиотеками и
+						фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их
+						под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
 				</div>
 			</div>
 		</section>
