--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
 				</div>
 			</div>
-		</section> 
+		</section>
 
 		<!-- Services -->
 		<section class="section" id="services">
@@ -172,36 +172,35 @@
 		<section class="section" id="contacts">
 			<div class="section__contacts">
 				<div class="container">
-		<h3 class="contacts__title" id="contacts">Для связи:</h3>
 					<div class="contacts">
-						<div class="contact__info"><a class="contact__link" href="#">instagram</a></div>
-						<div class="contact__info"><a class="contact__link" href="#">telegram</a></div>
-						<div class="contact__info"><a class="contact__link" href="#">mail</a></div>
+						<div class="social">
+							<h3 class="social__title">Для связи:</h3>
+							<div class="social__item">
+								<div class="social__info"><a class="contact__link" href="https://www.instagram.com/dariazhel28" target="_blank">instagram</a></div>
+								<div class="social__info"><a class="contact__link" href="https://t.me/dariazhel" target="_blank">telegram</a></div>
+								<div class="social__info"><a class="contact__link" href="mailto:stdap28@gmail.com">mail</a></div>
+							</div>
+						</div>
+
+						<div class="form__container">
+
+							<div class="modal__header">
+								<h2 class="modal__title">
+									Оставить заявку
+								</h2>
+							</div>
+							<form action="#">
+								<div class="form__content">
+									<input class="form-input" type="text" name="Name" placeholder="Ваше имя...">
+									<input class="form-input" type="text" name="Phone" placeholder="Ваш телефон...">
+									<textarea class="form-input form__textarea" name="Message" placeholder="Сообщение..."></textarea>
+								</div>
+							</form>
+							<div class="modal__footer">
+								<button class="form__button"><span>Отправить</span></button>
+							</div>
+						</div>
 					</div>
-
-
-
-		<div class="modal__container">
-
-						<header class="modal__header">
-							<h2 class="modal__title" id="modal-1-title">
-								Оставить заявку
-							</h2>
-
-						</header>
-						<form action="#">
-							<main class="modal__content">
-								<input class="form-input modal__input" type="text" name="VH-Name" placeholder="Ваше имя...">
-								<input class="form-input modal__input" type="text" name="VH-Phone" placeholder="Ваш телефон...">
-								<textarea class="form-input modal__input" name="Message" placeholder="Сообщение..."></textarea>
-							</main>
-						</form>
-						<footer class="modal__footer">
-							<button class="button"><span>Отправить</span></button>
-						</footer>
-					</div>
-
-
 				</div>
 			</div>
 		</section>
