--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		</div>
 	</header>
 
-	<main class="main">
+<!-- 	<main class="main">
 		<!-- Projects -->
 		<section class="section" id="portfolio">
 			<div class="container">
@@ -214,7 +214,7 @@
 				<p class="footer__copyright">Все права защищены. 2023</p>
 			</div>
 		</div>
-	</footer>
+	</footer> -->
 
 	<script src="js/app.js"></script>
 </body>
