--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
 					</a>
 				</div>
 				<nav class="nav">
-					<a href="#portfolio" class="nav__link">портфолио</a>
-					<a href="#skils" class="nav__link">компетенции</a>
-					<a href="#" class="nav__link">УСЛУГИ</a>
-					<a href="#" class="nav__link">КОНТАКТЫ</a>
+					
+					<div class="nav__list">
+						<a href="#portfolio" class="nav__link">портфолио</a>
+						<a href="#skils" class="nav__link">компетенции</a>
+						<a href="#" class="nav__link">УСЛУГИ</a>
+						<a href="#" class="nav__link">КОНТАКТЫ</a>
+					</div>
+
 				</nav>
 				<button class="burger" type="button">
 					<span class="burger__icon">Menu</span>
@@ -56,9 +60,9 @@
 		</div>
 	</header>
 
-	<main class="main">
-		<!-- Projects -->
-		<section class="section" id="portfolio">
+	<!-- <main class="main"> -->
+	<!-- Projects -->
+	<!-- <section class="section" id="portfolio">
 			<div class="container">
 				<h2 class="section__title">Самые свежие проекты</h2>
 				<ul class="projects">
@@ -129,10 +133,10 @@
 						под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
-		<!-- Services -->
-		<section class="section" id="services">
+	<!-- Services -->
+	<!-- <section class="section" id="services">
 			<div class="container">
 				<h2 class="section__title-services">Помогаю реализовать <br> широкий спектр задач</h2>
 				<ul class="services">
@@ -204,17 +208,17 @@
 				</div>
 			</div>
 		</section>
-	</main>
+	</main> -->
 
 	<!-- Footer -->
-	<footer class="footer">
+	<!-- <footer class="footer">
 		<div class="container">
 			<div class="footer__info">
 				<p class="footer__text">Портфолио фротнтенд-разработчика Дарьи Желтковой</p>
 				<p class="footer__copyright">Все права защищены. 2023</p>
 			</div>
 		</div>
-	</footer>
+	</footer> -->
 
 	<script src="js/app.js"></script>
 </body>
