--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 			<div class="header__inner">
 				<div class="header__logo">
 					<a href="/">
-						<img class="logo__img" src="img/DariaFrontEnd.png" alt="логотип DariaFrontEnd">
+						<img class="header__logo-img" src="img/DariaFrontEnd.png" alt="логотип DariaFrontEnd">
 					</a>
 				</div>
 				<nav class="nav">
 					<div class="nav__list">
 						<a href="#portfolio" class="nav__link">портфолио</a>
-						<a href="#skils" class="nav__link">компетенции</a>
-						<a href="#" class="nav__link">УСЛУГИ</a>
-						<a href="#" class="nav__link">КОНТАКТЫ</a>
+						<a href="#skills" class="nav__link">компетенции</a>
+						<a href="#services" class="nav__link">УСЛУГИ</a>
+						<a href="#contacts" class="nav__link">КОНТАКТЫ</a>
 					</div>
 				</nav>
 				<button class="burger" type="button">
@@ -66,88 +66,99 @@
 				<ul class="projects">
 					<li class="project__item">
 						<picture>
-							<source media="(max-width: 500px)" srcset="img/projects/ActiveBox__mobile.png" />
-							<source media="(max-width: 1199px)" srcset="img/projects/ActiveBox__tablet.png" />
-							<img src="img/projects/ActiveBox.png" alt="превью Realhome" class="project__preview">
+							<source media="(max-width: 500px)" srcset="img/projects/ABox_mobile.png" />
+							<source media="(max-width: 1199px)" srcset="img/projects/ABox_tablet.png" />
+							<img src="img/projects/ABox.png" alt="превью ActiveBox" class="project__preview">
 						</picture>
-						
 						<div class="project__description">
 							<h3 class="project__title">
-								<a class="project__title__link" href="https://dariazheltkova.github.io/ActiveBox/" target="_blank">ActiveBox</a>
+								<a class="project__title-link" href="https://dariazheltkova.github.io/ActiveBox/"
+									target="_blank">ActiveBox</a>
 							</h3>
 							<p class="project__text">верстка</p>
 						</div>
-						<a href="https://dariazheltkova.github.io/ActiveBox/" class="project__link" target="_blank" ></a>
+						<a href="https://dariazheltkova.github.io/ActiveBox/" class="project__link" target="_blank"></a>
 					</li>
 
 					<li class="project__item">
-						<img src="img/projects/Снимок экрана 2023-03-23 192540.png" alt="превью Fesiyen" class="project__preview">
+						<picture>
+							<source media="(max-width: 500px)" srcset="img/projects/metrika_mobile.png" />
+							<source media="(max-width: 1199px)" srcset="img/projects/metrika_tablet.png" />
+							<img src="img/projects/metrika.png" alt="превью студии дизайна Метрика" class="project__preview">
+						</picture>
 						<div class="project__description">
 							<h3 class="project__title">
-								<a class="project__title__link" href="https://dariazheltkova.github.io/project-1/" target="_blank">Студия дизайна интерьера
-									Метрика</a>
+								<a class="project__title-link" href="https://dariazheltkova.github.io/project-1/" target="_blank">Студия
+									дизайна интерьера Метрика</a>
 							</h3>
 							<p class="project__text">верстка</p>
 						</div>
-						<a href="https://dariazheltkova.github.io/project-1/" class="project__link" target="_blank" ></a>
+						<a href="https://dariazheltkova.github.io/project-1/" class="project__link" target="_blank"></a>
 					</li>
 
 					<li class="project__item">
-						<img src="img/projects/Снимок экрана 2023-03-23 191731.png" alt="превью GLASS" class="project__preview">
+						<picture>
+							<source media="(max-width: 500px)" srcset="img/projects/tss_mobile.png" />
+							<source media="(max-width: 1199px)" srcset="img/projects/tss_tablet.png" />
+							<img src="img/projects/tss.png" alt="превью транспортной компании ТрансСтройСервис"
+								class="project__preview">
+						</picture>
 						<div class="project__description">
 							<h3 class="project__title">
-								<a class="project__title__link" href="https://transstroyservistnd28.ru/" target="_blank">ТрансСтройСервис</a>
+								<a class="project__title-link" href="https://transstroyservistnd28.ru/"
+									target="_blank">ТрансСтройСервис</a>
 							</h3>
 							<p class="project__text">дизайн, верстка, настройка</p>
 						</div>
-						<a href="https://transstroyservistnd28.ru/" class="project__link" target="_blank" ></a>
+						<a href="https://transstroyservistnd28.ru/" class="project__link" target="_blank"></a>
 					</li>
 				</ul>
 				<a class="projects__info" href="#">Смотреть все проекты</a>
 			</div>
 		</section>
 
-		<!-- <section class="section" id="skils">
+		<!-- Skills -->
+		<section class="section" id="skills">
 			<div class="container">
-				<h2 class="section__title title__skils" id="skils">Мои компетенции</h2>
-				<div class="skils">
-					<h3 class="skils__title">HTML и CSS</h3>
-					<p class="skils__description">это основа фронтенд разработки. Умение создавать и правильно структурировать
+				<h2 class="section__title section__skills-title">Мои компетенции</h2>
+				<div class="skills skills__html">
+					<h3 class="skills__title">HTML и CSS</h3>
+					<p class="skills__description">это основа фронтенд разработки. Умение создавать и правильно структурировать
 						HTML-документы, а также применять стили к этим документам на CSS, является обязательным навыком для каждого
 						фронтенд разработчика.</p>
 				</div>
 
-				<div class="skils">
-					<h3 class="skils__title">JavaScript</h3>
-					<p class="skils__description">это язык программирования, который используется для создания динамического и
+				<div class="skills skills__js">
+					<h3 class="skills__title">JavaScript</h3>
+					<p class="skills__description">это язык программирования, который используется для создания динамического и
 						интерактивного пользовательского интерфейса. Хороший фронтенд разработчик должен быть знаком с основами
 						JavaScript, включая работу с DOM-деревом, асинхронными запросами и манипуляцией данными на стороне клиента.
 					</p>
 				</div>
 
-				<div class="skils">
-					<h3 class="skils__title">Работа с библиотеками и фреймворками</h3>
-					<p class="skils__description">фронтенд разработчики должны быть знакомы с различными библиотеками и
+				<div class="skills skills__library">
+					<h3 class="skills__title">Работа с библиотеками и фреймворками</h3>
+					<p class="skills__description">фронтенд разработчики должны быть знакомы с различными библиотеками и
 						фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их
 						под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
 				</div>
 
-				<div class="skils">
-					<h3 class="skils__title">Разработка для мобильных <br> устройств и адаптивная верстка</h3>
-					<p class="skils__description">фронтенд разработчики должны быть знакомы с различными библиотеками и
+				<div class="skills skills__adaptive">
+					<h3 class="skills__title">Разработка для мобильных <br> устройств и адаптивная верстка</h3>
+					<p class="skills__description">фронтенд разработчики должны быть знакомы с различными библиотеками и
 						фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их
 						под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
 				</div>
 			</div>
-		</section> -->
+		</section>
 
 		<!-- Services -->
-		<!-- <section class="section" id="services">
+		<section class="section" id="services">
 			<div class="container">
-				<h2 class="section__title-services">Помогаю реализовать <br> широкий спектр задач</h2>
+				<h2 class="section__services-title">Помогаю реализовать <br> широкий спектр задач</h2>
 				<ul class="services">
 					<li class="services__item">
-						<img src="img/tasks/1.png" alt="" class="services__preview">
+						<img src="img/services/1.png" alt="" class="services__preview">
 						<div class="services__description">
 							<h3 class="services__title">Разработка сайта под ключ</h3>
 							<p class="services__text">Это создание дизайн веб-сайтов, созданный для удобства пользователя и решения
@@ -158,7 +169,7 @@
 					</li>
 
 					<li class="services__item">
-						<img src="img/tasks/2.png" alt="" class="services__preview">
+						<img src="img/services/2.png" alt="" class="services__preview">
 						<div class="services__description">
 							<h3 class="services__title">Верстка сайтов</h3>
 							<p class="services__text">Это процесс создания HTML-документов и применения к ним стилей на CSS. Фронтенд
@@ -167,7 +178,7 @@
 					</li>
 
 					<li class="services__item">
-						<img src="img/tasks/3.png" alt="" class="services__preview">
+						<img src="img/services/3.png" alt="" class="services__preview">
 						<div class="services__description">
 							<h3 class="services__title">Разработка мобильного интерфейса</h3>
 							<p class="services__text">Это процесс создания интерактивных элементов на странице с помощью JavaScript.
@@ -179,54 +190,40 @@
 			</div>
 		</section>
 
-		<section class="section" id="contacts">
-			<div class="section__contacts">
-				<div class="container">
-					<div class="contacts">
-						<div class="social">
-							<h3 class="social__title">Для связи:</h3>
-							<div class="social__item">
-								<div class="social__info"><a class="contact__link" href="https://www.instagram.com/dariazhel28" target="_blank">instagram</a></div>
-								<div class="social__info"><a class="contact__link" href="https://t.me/dariazhel" target="_blank">telegram</a></div>
-								<div class="social__info"><a class="contact__link" href="mailto:stdap28@gmail.com">mail</a></div>
+		<!-- Contacts -->
+		<section class="section section__contacts" id="contacts">
+			<div class="container">
+				<div class="contacts">
+					<div class="contacts__social">
+						<div class="contacts__social-wrapper">
+							<h3 class="contacts__social-title">Для связи:</h3>
+							<div class="contact__social-info">
+								<a class="contact__social-link" href="https://www.instagram.com/dariazhel28" target="_blank">instagram</a>
 							</div>
-						</div>
-
-						<div class="form__container">
-
-							<div class="modal__header">
-								<h2 class="modal__title">
-									Оставить заявку
-								</h2>
+							<div class="contact__social-info">
+								<a class="contact__social-link" href="https://t.me/dariazhel" target="_blank">telegram</a>
 							</div>
-							<form action="#">
-								<div class="form__content">
-									<input class="form-input" type="text" name="Name" placeholder="Ваше имя...">
-									<input class="form-input" type="text" name="Phone" placeholder="Ваш телефон...">
-									<textarea class="form-input form__textarea" name="Message" placeholder="Сообщение..."></textarea>
-								</div>
-							</form>
-							<div class="modal__footer">
-								<button class="form__button"><span>Отправить</span></button>
+							<div class="contact__social-info">
+								<a class="contact__social-link" href="mailto:stdap28@gmail.com">mail</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-	 </main>
+	</main>
 
 	<!-- Footer -->
-		<!-- <footer class="footer">
+	<footer class="footer">
 		<div class="container">
 			<div class="footer__info">
 				<p class="footer__text">Портфолио фротнтенд-разработчика Дарьи Желтковой</p>
 				<p class="footer__copyright">Все права защищены. 2023</p>
 			</div>
 		</div>
-	</footer> -->
+	</footer>
 
-		<script src="js/app.js"></script>
+	<script src="js/app.js"></script>
 </body>
 
 </html>
