--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
 						</picture>
 						<div class="project__description">
 							<h3 class="project__title">
-								<a class="project__title-link" href="https://dariazheltkova.github.io/project-1/" target="_blank">Студия
+								<a class="project__title-link" href="https://dariazheltkova.github.io/metrika/" target="_blank">Студия
 									дизайна интерьера Метрика</a>
 							</h3>
 							<p class="project__text">верстка</p>
 						</div>
-						<a href="https://dariazheltkova.github.io/project-1/" class="project__link" target="_blank"></a>
+						<a href="https://dariazheltkova.github.io/metrika/" class="project__link" target="_blank"></a>
 					</li>
 
 					<li class="project__item">
@@ -144,7 +144,7 @@
 				</div>
 
 				<div class="skills skills__adaptive">
-					<h3 class="skills__title">Разработка для мобильных <br> устройств и адаптивная верстка</h3>
+					<h3 class="skills__title">Разработка для мобильных устройств и адаптивная верстка</h3>
 					<p class="skills__description">фронтенд разработчики должны быть знакомы с различными библиотеками и
 						фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их
 						под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
