--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<li class="project__item">
 						<picture>
 							<source media="(max-width: 500px)" srcset="img/projects/ABox_mobile.png" />
-							<source media="(max-width: 1199px)" srcset="img/projects/ABox_tablet.png" />
+							<source media="(max-width: 991px)" srcset="img/projects/ABox_tablet.png" />
 							<img src="img/projects/ABox.png" alt="превью ActiveBox" class="project__preview">
 						</picture>
 						<div class="project__description">
@@ -83,7 +83,7 @@
 					<li class="project__item">
 						<picture>
 							<source media="(max-width: 500px)" srcset="img/projects/metrika_mobile.png" />
-							<source media="(max-width: 1199px)" srcset="img/projects/metrika_tablet.png" />
+							<source media="(max-width: 991px)" srcset="img/projects/metrika_tablet.png" />
 							<img src="img/projects/metrika.png" alt="превью студии дизайна Метрика" class="project__preview">
 						</picture>
 						<div class="project__description">
@@ -99,7 +99,7 @@
 					<li class="project__item">
 						<picture>
 							<source media="(max-width: 500px)" srcset="img/projects/tss_mobile.png" />
-							<source media="(max-width: 1199px)" srcset="img/projects/tss_tablet.png" />
+							<source media="(max-width: 991px)" srcset="img/projects/tss_tablet.png" />
 							<img src="img/projects/tss.png" alt="превью транспортной компании ТрансСтройСервис"
 								class="project__preview">
 						</picture>
@@ -158,7 +158,7 @@
 				<h2 class="section__services-title">Помогаю реализовать <br> широкий спектр задач</h2>
 				<ul class="services">
 					<li class="services__item">
-						<img src="img/services/1.png" alt="" class="services__preview">
+						<img src="img/services/personal_finances.png" alt="Take full control of your personal finances" class="services__preview">
 						<div class="services__description">
 							<h3 class="services__title">Разработка сайта под ключ</h3>
 							<p class="services__text">Это создание дизайн веб-сайтов, созданный для удобства пользователя и решения
@@ -169,7 +169,7 @@
 					</li>
 
 					<li class="services__item">
-						<img src="img/services/2.png" alt="" class="services__preview">
+						<img src="img/services/moments.png" alt="Moments move us" class="services__preview">
 						<div class="services__description">
 							<h3 class="services__title">Верстка сайтов</h3>
 							<p class="services__text">Это процесс создания HTML-документов и применения к ним стилей на CSS. Фронтенд
@@ -178,7 +178,7 @@
 					</li>
 
 					<li class="services__item">
-						<img src="img/services/3.png" alt="" class="services__preview">
+						<img src="img/services/courses.png" alt="Get access to all courses" class="services__preview">
 						<div class="services__description">
 							<h3 class="services__title">Разработка мобильного интерфейса</h3>
 							<p class="services__text">Это процесс создания интерактивных элементов на странице с помощью JavaScript.
