--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="container">
 			<div class="header__inner">
 				<div class="header__logo">
-					<a href="/">
+					<a href="https://dariazheltkova.github.io/portfolio/">
 						<img class="header__logo-img" src="img/DariaFrontEnd.png" alt="логотип DariaFrontEnd">
 					</a>
 				</div>
