--- a/index.html
+++ b/index.html
@@ -214,26 +214,32 @@
 		</section>
 
 		<!-- Contacts -->
-		<!-- <section class="section section__contacts" id="contacts">
+		<section class="section section__contacts" id="contacts">
 			<div class="container">
-				<div class="contacts">
-					<div class="contacts__social">
-						<div class="contacts__social-wrapper">
-							<h3 class="contacts__social-title">Для связи:</h3>
-							<div class="contact__social-info">
-
+				<!-- <p class="contacts__title">Для связи со мной заполните простую форму</p> -->
+				<div class="form__wrapper">
+					<div class="form__container">
+						<div class="modal__header">
+							<h2 class="modal__title">
+								Для связи со мной заполните простую форму
+							</h2>
+						</div>
+						<form action="#">
+							<div class="form__content">
+								<input class="form-input" type="text" name="Name" placeholder="Ваше имя...">
+								<input class="form-input" type="text" name="Phone" placeholder="Ваш телефон...">
+								<textarea class="form-input form__textarea" name="Message" placeholder="Сообщение..."></textarea>
 							</div>
-							<div class="contact__social-info">
-
-							</div>
-							<div class="contact__social-info">
-
-							</div>
+						</form>
+						<div class="modal__footer">
+							<button class="form__button"><span>Отправить</span></button>
 						</div>
 					</div>
 				</div>
+
+
 			</div>
-		</section> -->
+		</section>
 	</main>
 
 	<!-- Footer -->
