form and adaptive

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<li class="project__item">
 						<picture>
 							<source media="(max-width: 500px)" srcset="img/projects/ABox_mobile.png">
-							<source media="(max-width: 991px)" srcset="img/projects/ABox_tablet.png">
+							<source media="(max-width: 1024px)" srcset="img/projects/ABox_tablet.png">
 							<img src="img/projects/ABox.png" alt="превью ActiveBox" class="project__preview">
 						</picture>
 						<div class="project__description">
@@ -105,7 +105,7 @@
 					<li class="project__item">
 						<picture>
 							<source media="(max-width: 500px)" srcset="img/projects/metrika_mobile.png">
-							<source media="(max-width: 991px)" srcset="img/projects/metrika_tablet.png">
+							<source media="(max-width: 1024px)" srcset="img/projects/metrika_tablet.png">
 							<img src="img/projects/metrika.png" alt="превью студии дизайна Метрика" class="project__preview">
 						</picture>
 						<div class="project__description">
@@ -121,7 +121,7 @@
 					<li class="project__item">
 						<picture>
 							<source media="(max-width: 500px)" srcset="img/projects/tss_mobile.png">
-							<source media="(max-width: 991px)" srcset="img/projects/tss_tablet.png">
+							<source media="(max-width: 1024px)" srcset="img/projects/tss_tablet.png">
 							<img src="img/projects/tss.png" alt="превью транспортной компании ТрансСтройСервис"
 								class="project__preview">
 						</picture>
@@ -216,14 +216,11 @@
 		<!-- Contacts -->
 		<section class="section section__contacts" id="contacts">
 			<div class="container">
-				<!-- <p class="contacts__title">Для связи со мной заполните простую форму</p> -->
 				<div class="form__wrapper">
 					<div class="form__container">
-						<div class="modal__header">
-							<h2 class="modal__title">
-								Для связи со мной заполните простую форму
-							</h2>
-						</div>
+						<h2 class="form__title">
+							Для связи со мной заполните простую форму
+						</h2>
 						<form action="#">
 							<div class="form__content">
 								<input class="form-input" type="text" name="Name" placeholder="Ваше имя...">
@@ -231,13 +228,9 @@
 								<textarea class="form-input form__textarea" name="Message" placeholder="Сообщение..."></textarea>
 							</div>
 						</form>
-						<div class="modal__footer">
-							<button class="form__button"><span>Отправить</span></button>
-						</div>
+						<button class="form__button"><span>Отправить</span></button>
 					</div>
 				</div>
-
-
 			</div>
 		</section>
 	</main>
