--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
 				</div>
 				<nav class="nav">
 					<ul class="nav__list">
-						<li>
+						<li class="nav__list-item">
 							<a href="#portfolio" class="nav__link">портфолио</a>
 						</li>
-						<li>
+						<li class="nav__list-item">
 							<a href="#skills" class="nav__link">компетенции</a>
 						</li>
-						<li>
+						<li class="nav__list-item">
 							<a href="#services" class="nav__link">УСЛУГИ</a>
 						</li>
-						<li>
+						<li class="nav__list-item">
 							<a href="#contacts" class="nav__link">КОНТАКТЫ</a>
 						</li>
 					</ul>
